--- a/style.css
+++ b/style.css
@@ -1,34 +1,35 @@
 body.dark {
-    background-color: black;
-    color: #4aff3a;
+  background-color: #152028;
+  color: #4aff3a;
+}
+
+body.dark img {
+  -webkit-filter: brightness(0.8) contrast(1.2);
+          filter: brightness(0.8) contrast(1.2);
+  font-weight: 700;
+  color: aliceblue;
 }
 
 body.light {
-    background-color: rgb(255, 255, 255);
-    color: #000000;
+  background-color: white;
+  color: #000000;
 }
 
 @media (prefers-color-scheme: dark) {
-    body {
-        background-color: black;
-        color: #4aff3a;
-    }
-    body.light {
-        background-color: rgb(255, 255, 255);
-        color: #000000;
-    }
+  body.dark {
+    background-color: #152028;
+    color: #4aff3a;
+  }
+  body.dark img {
+    -webkit-filter: brightness(0.8) contrast(1.2);
+            filter: brightness(0.8) contrast(1.2);
+  }
 }
 
 @media (prefers-color-scheme: light) {
-    body {
-        background-claro: black;
-        color: #8d8d8d;
-    }
-    body.dark {
-        background-color: black;
-        color: #4aff3a;
-    }
+  body.light {
+    background-color: white;
+    color: #050505;
+  }
 }
-
-
 /*# sourceMappingURL=style.css.map */
